fix z-index of tooltips relative to modal

--- a/public/stylesheets/popup.css
+++ b/public/stylesheets/popup.css
@@ -1,7 +1,7 @@
 /*Popup css for the modals*/
 .modal {
   display: none; /* Hidden by default */
-  z-index: 10000; /* Sit on top */
+  z-index: 1000000; /* Sit on top */
   position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
   width:100%;
@@ -19,7 +19,7 @@
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
-  z-index: 10000;
+  z-index: 1000000;
 }
 
 /* The Close Button */
